--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-chapter01/hello
-chapter01/bet
 chapter01/adios
+chapter01/atoitest
 chapter01/badboy
+chapter01/bet
+chapter01/booltest
+chapter01/breaktest
+chapter01/count
+chapter01/forloop
+chapter01/hello
 chapter01/shatner
+chapter01/suits
+chapter01/whileloop
